Restore zooming while hovered over custom scroll container, set max-height on center when zoomed out far to avoid bottom stretch where action button is at bottom of page far from container

--- a/src/_styles/global.css
+++ b/src/_styles/global.css
@@ -340,6 +340,7 @@ button {
   display: flex;
   flex-direction: column;
   min-height: 0;
+  max-height: fit-content;
 }
 #header {
   flex-shrink: 0;
